# re1sid-lib

./: README.md  common.py  main.py  pyproject.toml
src/re1sid_lib/: __init__.py  downloader.py  patcher.py  tui.py
