[project]
name = "re1sid-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "09u2h4n", email = "09u2h4n.y1lm42@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "pyaxmlparser>=0.3.31",
]
urls = { homepage = "https://github.com/09u2h4n/re1sid-lib", repository = "https://github.com/09u2h4n/re1sid-lib", documentation = "https://github.com/09u2h4n/re1sid-lib#readme" }

[project.scripts]
re1sid-lib = "re1sid_lib:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
